Feat: se crea vista task,controller y modelo

--- a/TaskZen/TaskZen.csproj
+++ b/TaskZen/TaskZen.csproj
@@ -6,4 +6,8 @@
     <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
 
+  <ItemGroup>
+    <Content Remove="Views\Shared\taskBoard.razor" />
+  </ItemGroup>
+
 </Project>
