--- a/TaskZen/.env
+++ b/TaskZen/.env
@@ -1,1 +1,1 @@
-CONNECTION_STRING=Server=localhost\SQLEXPRESS;Database=TasksDB;Trusted_Connection=True;
+CONNECTION_STRING=Server=localhost\SQLEXPRESS;Database=TasksDB;Trusted_Connection=True;TrustServerCertificate=True;
