feat: se traen cambios y se adapta cadena de connexion

--- a/TaskZen/.env
+++ b/TaskZen/.env
@@ -1,1 +1,1 @@
-CONNECTION_STRING=Server=localhost\SQLEXPRESS;Database=TasksDB;Trusted_Connection=True;
+CONNECTION_STRING=Server=localhost\SQLEXPRESS;Database=TaskDB;Trusted_Connection=True;
