Some files has been updated

--- a/.gitignore
+++ b/.gitignore
@@ -9,6 +9,8 @@
 *.user
 *.userosscache
 *.sln.docstates
+*.env.local
+*.env.production
 
 # User-specific files (MonoDevelop/Xamarin Studio)
 *.userprefs
